[gd_scene load_steps=9 format=3 uid="uid://sn52youg6fgd"]

[ext_resource type="Theme" uid="uid://duowea83rtf4k" path="res://Materials/Themes/overall_theme.tres" id="1_xc0y1"]
[ext_resource type="Script" path="res://Scenes/removal_ui.gd" id="2_v4m3l"]
[ext_resource type="PackedScene" uid="uid://ct3tfncha3soj" path="res://Scenes/Text/usable_rich_text.tscn" id="2_xgrot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g52mo"]
bg_color = Color(1, 0.945098, 0.921569, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 0, 0, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.74, 0.675867, 0.6438, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7okj"]
bg_color = Color(1, 0.945098, 0.921569, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 0, 0, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.74, 0.675867, 0.6438, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y8ofe"]
bg_color = Color(1, 0.946667, 0.92, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.95, 0.8968, 0.874, 1)
shadow_size = 1
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mbee"]
bg_color = Color(1, 0.913725, 0.870588, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 0, 0, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.74, 0.675867, 0.6438, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ke3cx"]
bg_color = Color(1, 0.913725, 0.870588, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.74, 0.675867, 0.6438, 1)
shadow_size = 1
shadow_offset = Vector2(0, 4)

[node name="RemovalUI" type="Button"]
custom_minimum_size = Vector2(125, 50)
offset_right = 125.0
offset_bottom = 50.0
focus_mode = 0
theme = ExtResource("1_xc0y1")
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/font_hover_color = Color(1, 1, 1, 0)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/font_focus_color = Color(1, 1, 1, 0)
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_outline_color = Color(1, 1, 1, 0)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 0)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 0)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0)
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_g52mo")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_w7okj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_y8ofe")
theme_override_styles/hover = SubResource("StyleBoxFlat_y8ofe")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_1mbee")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1mbee")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_ke3cx")
theme_override_styles/normal = SubResource("StyleBoxFlat_ke3cx")
toggle_mode = true
script = ExtResource("2_v4m3l")

[node name="Hbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RemovalImg" type="TextureRect" parent="Hbox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="UsableRichText" parent="Hbox" instance=ExtResource("2_xgrot")]
layout_mode = 2
mouse_filter = 1
text = "- 1 "
label_text = "- 1 "
default_text_bbcode = "[center]%s[/center]"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
